added info to pastevents, minor changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 <h3 class="media-heading"><span class="glyphicon glyphicon-ok"></span> A curriculum built to engage students.</h3>
-<p>Our curriculum covers the practical skills students need to contribute to open source projects, such as using version control, issue trackers, and IRC. It creates connections between students and open source professionals who can explain how the community and culture works. And it gives students the opportunity to make real contributions to active open source projects - all in single day!</p> 
+<p>Our curriculum covers the practical skills students need to contribute to open source projects, such as using version control, issue trackers, and IRC. It creates connections between students and open source professionals who can explain how the community and culture works. And it gives students the opportunity to make real contributions to active open source projects - all in a single day!</p> 
 <p>All of our curriculum materials are online, and most activities have instructor walkthroughs and/or screencasts as well. <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum">Take a look</a> at what we offer. We're happy to help you adjust the curriculum to meet your needs, and do trainings for any activities or sections you don't feel comfortable with.</p>
 	</div>
     </div>
@@ -69,7 +69,7 @@
     <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 <h3 class="media-heading"><span class="glyphicon glyphicon-ok"></span> Friendly and knowledgeable volunteers</h3>
-        <p>We have a large network of open source enthusiasts who we'll ask to staff your event, and we can help you <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics#How_do_you_find_staff.3F">find new volunteers</a> as well. We'll also support you with a number of remote staff, including:</p>
+        <p>We have a large network of open source enthusiasts who we'll ask to staff your event, and we can help you <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics#How_do_you_find_staff.3F">find new volunteers</a> as well. If possible, an OpenHatch organizer will attend and mentor at your event. We'll also support you with a number of remote staff, including:</p>
 <ul>
 <li>Throughout the entire event, at least one OpenHatch organizer will be available remotely.</li>
 <li>During the contributions workshop, we'll have maintainers of <a href="https://openhatch.org/wiki/OpenHatch_affiliated_projects">selected projects</a> available to help guide attendees through contributing to said projects via IRC.</li>
