--- a/pastevents.html
+++ b/pastevents.html
@@ -82,7 +82,7 @@
 				<a href="http://openhatch.org/blog/2013/teaching-open-source-at-indiana-university-bloomington/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
 			</div>
 			<div class="col-md-4">
-				<img src="./static/img/replace.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
 				<h4>Community College of San Francisco</h4>
 				<h4 class="date">June 29th, 2013</h4>
 				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a> and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
@@ -151,22 +151,26 @@
 
 		<div class="row">
 			<div class="col-md-4">
-				<img src="./static/img/replace.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
 				<h4>University of Maryland College Park</h4>
 				<h4 class="date">February 25th and 26th, 2012</h4>
 				<p>Hosted by the <a href="http://www.cs.umd.edu/~awc/">Association of Women in Computing</a>.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="./static/img/replace.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
 				<h4>Massachusetts Institute of Technology</h4>
 				<h4 class="date">September 20th, 2011</h4>
 				<p>Hosted by the <a href="http://sipb.mit.edu/">MIT Student Information Processing Board</a>.</p>
 	        	</div>
 			<div class="col-md-4">
-				<img src="./static/img/replace.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_penn.jpg" class="img-thumbnail">
 				<h4>University of Pennsylvania</h4>
 				<h4 class="date">September 25th and 26th, 2010</h4>
 				<p>Hosted by the Penn Department of Computer Science.</p>
+				<a href="http://openhatch.org/blog/2010/photos-from-penn/"></span>  Pictures</a>  &nbsp;&nbsp;
+				<a href="http://opensource.com/life/10/11/introducing-students-world-open-source-day-1"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
+
+
 	        	</div>
 		</div>
 
